# OmniLocal-Spotlight-but-with-a-brain-

./: .gitignore  README.md  index.html  package-lock.json  package.json  patch_ai.js  patch_settings.js  patch_settings.sh  patch_settings_react.sh  plan.md  vite.config.ts
.agents/workflows/: critic.md
docs/: README.md  Suggestions.md  app_overview_state.md  architecture_rewrite_plan.md  fix_checklist.md  performance_tuning.md  plan.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.data/: smartsearch.db-shm  smartsearch.db-wal
src-tauri/src/: ai.rs  chunker.rs  context.rs  db.rs  lib.rs  main.rs  mcp.rs  scanner.rs  search.rs  watcher.rs
src-tauri/src/commands/: collections.rs  mod.rs  search.rs  settings.rs
src-tauri/src/core/: ai.rs  chunker.rs  context.rs  db.rs  mcp.rs  mod.rs  scanner.rs  search.rs  watcher.rs
src-tauri/src/workers/: embedding.rs
src/components/InsightPanel/: InsightPanel.module.css  InsightPanel.tsx
src/components/ResultCard/: ResultCard.module.css  ResultCard.tsx
src/components/SearchBar/: SearchBar.module.css  SearchBar.tsx
src/components/SearchFilters/: SearchFilters.module.css  SearchFilters.tsx
src/components/Settings/: QuickSettings.module.css  QuickSettings.tsx  Settings.module.css  Settings.tsx
src/components/StatusBar/: StatusBar.module.css  StatusBar.tsx
src/lib/: tauri.ts
src/styles/: globals.css
